# ExLLMgRPC

./: Dockerfile  docker-compose.grpcui.yml  docker-compose.serv.yml  docker-compose.yml  gen_pb2.py  gen_pb2_grpc.py  generate_proto.sh  pyproject.toml  server.py
model/: geb_image.py  gen_image.py  gen_text.py
proto/: gen.proto
